src/objects/filegen__Batch_Control_Record__c.object
<CustomObject>
    <fields>
        <fullName>filegen__Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Company_Identification__c</fullName>
        <label>Company  Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Entry_Addenda_Count__c</fullName>
        <label>Entry/Addenda  Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Entry_Hash__c</fullName>
        <label>Entry Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Message_Authentication_Code__c</fullName>
        <label>Message  Authentication  Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Originating_DFI_Identification__c</fullName>
        <label>Originating DFI  Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Reserved__c</fullName>
        <label>Reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Service_Class_Code__c</fullName>
        <label>Service Class  Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Total_Credit_Entry_Dollar_Amount__c</fullName>
        <label>Total Credit  Entry Dollar  Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Total_Debit_Entry_Dollar_Amount__c</fullName>
        <label>Total Debit  Entry Dollar  Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Batch Control Record</label>
    <nameField>
        <displayFormat>BCR-{0000000000}</displayFormat>
        <label>Batch Control Record  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Control Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>